czmq version 1.1.0 (draft), released on 2011/06/xx
==================================================

Changes
-------

* zloop works with zmq_pollitem_t * instead of void * sockets; allows
  use of native FDs in reactor as well as 0MQ sockets.

* zloop_reader renamed to zloop_poller.

* zloop_cancel renamed to zloop_poller_end, and API changed to work with
  zmq_pollitem_t * instead of a single 0MQ socket void *.

* Added zloop_timer_end, taking same argument as for zloop_timer.

* zloop_poller_end cancels ALL handlers for the socket or FD.

* Added zmsg_content_size method to report full content size of message.

* zmsg_save returns 0/-1 depending on success/failure (previously returned
  void).

* zmsg_dump limited to first 10 frames, to allow mix of large and small
  messages in applications.

* zframe_print truncates output at 70 chars to prevent over-long output.

* Added ability for zsocket_bind to bind to ephemeral port in range 0xc000
  to 0xffff.

* zmq_bind always returns port number bound to, if successful.

* Added zfile class with minimal helper functions.

* Added zfile_size method to return file size, as ssize_t.

* Added socket multipart flush to zctx_destroy to work around libzmq issue
  134, which asserts if a fair-queuing socket still has input at close.

* Added zframe_eq method to compare two frames' size and content.

* Changed zmsg_load to append to an optional existing message.

* Fixed zloop to allow timers to be added after reactor was started.
  Without this fix, the reactor would spin at max speed instead of
  properly calculating the timer. (Luc Heinrich)

* Modified zmsg_pushstr and zmsg_addstr to accept variable argument list
  and do vsnprintf formatting of provided string.

* Added zhash_rename function to allow soft renaming of item keys.

* Added tblsize and tbllast macros, so very useful when you need them.

* Added zmsg_encode and zmsg_decode functions to serialize messages to
  and from a byte buffer.
